# elephantic

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  bootstrap  compose.yaml  mkdocs.yml  pyproject.toml
.github/workflows/: deploy.yaml  testing.yaml
ci/: calculate-version
docs/: index.md
docs/api/: index.md
docs/development/: changelog.md  contributing.md
docs/getting-started/: installation.md  quickstart.md
docs/user-guide/: executing-queries.md  overview.md  query-building.md
src/elephantic/: __init__.py
src/elephantic/models/: __init__.py  acls.py  aggregate.py  argument.py  cast.py  casts.py  collation.py  column.py  constraint.py  conversion.py  conversions.py  dependencies.py  domain.py  event_trigger.py  foreign_data_wrapper.py  foreign_key.py  function.py  group.py  index.py  materialized_view.py  operator.py  operators.py  project.py  publication.py  role.py  schema.py  sequence.py  server.py  subscription.py  table.py  tablespace.py  text_search.py  trigger.py  type.py  types.py  user.py  user_mapping.py  view.py
tests/: __init__.py
tests/models/: test_acls.py  test_aggregate.py  test_argument.py  test_cast.py  test_casts.py  test_collation.py  test_column.py  test_constraint.py  test_conversion.py  test_conversions.py  test_dependencies.py  test_domain.py  test_event_trigger.py  test_foreign_data_wrapper.py  test_foreign_key.py  test_function.py  test_group.py  test_index.py  test_materialized_view.py  test_operator.py  test_operators.py  test_project.py  test_publication.py  test_role.py  test_schema.py  test_sequence.py  test_server.py  test_subscription.py  test_table.py  test_tablespace.py  test_text_search.py  test_trigger.py  test_type.py  test_types.py  test_user.py  test_user_mapping.py  test_view.py
