[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elephantic"
dynamic = ["version"]
description = "An ORMish library based on Pydantic"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Dave Shawley", email = "daves@aweber.com"},
    {name = "Gavin M. Roy", email = "gavinr@aweber.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
  "build",
  "coverage[toml]",
  "pre-commit",
  "pytest",
  "pytest-cov",
  "ruff",
]
docs = [
  "black",  # used by mkdocs for signature formatting
  "griffe-pydantic",  # document pydantic models
  "mkdocs>=1.5,<2",
  "mkdocs-material>9.5,<10",
  "mkdocstrings[python]>=0.26,<0.27",
  "mkdocstrings-python-xref>=1.6,<2"
]

[tool.coverage.html]
directory = "build/coverage"

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.coverage.run]
branch = true
source = ["elephantic"]
command_line = "-m unittest discover tests --buffer --verbose"

[tool.coverage.xml]
output = "build/reports/coverage.xml"

[tool.hatch.build]
artifacts = [
    "/VERSION",
]

[tool.hatch.build.targets.wheel]
src-layout = true

[tool.hatch.version]
path = "VERSION"
pattern = "(?P<version>.*)"

[tool.hatch.envs.default]
python = "python3.12"
features = ["dev"]

[tool.mkdocs]
config-file = "mkdocs.yml"

[tool.ruff]
line-length = 79
target-version = "py312"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
    "BLE",      # flake8-blind-except
    "C4",       # flake8-comprehensions
    "C90",      # mccabe
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "G",        # flake8-logging-format
    "I",        # isort
    "N",        # pep8-naming
    "Q",        # flake8-quotes
    "S",        # flake8-bandit
    "ASYNC",    # flake8-async
    "B",        # flake8-bugbear
    "DTZ",      # flake8-datetimez
    "FURB",     # refurb
    "RUF",      # ruff-specific
    "T20",      # flake8-print
    "UP",       # pyupgrade
]
ignore = [
    "E501",     # line too long - many long description strings in Pydantic models
    "N818",     # exception class names are not required to end in Error
    "RSE",      # contradicts Python Style Guide
    "UP040",    # allow non-pep695-type-alias
]
flake8-quotes = { inline-quotes = "single" }

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S"]
